welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:10: error: ';' expected but ',' found.
} else if (litMessage() == X) {recule();recule(),recule()
                                                ^